fix animated text -change mobile and web view change gaps, font size -change subheader text -add overflow scroll

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   text-align: center;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   position: relative;
   overflow: visible;
   margin: 0;
@@ -83,7 +83,7 @@
 }
 
 .main-page {
-  overflow: visible;
+  overflow: scroll;
   position: relative;
   background-color: var(--diablitoons-neutral-200);
   margin: 0;
