--- a/src/components/animatedText/animatedText.css
+++ b/src/components/animatedText/animatedText.css
@@ -12,7 +12,7 @@ section {
   text-align: center;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   width: 100%;
   height: 100%;
@@ -22,7 +22,7 @@ section {
   position: relative;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items:center;
   justify-content: center;
   font-family: 'Inter';
   width: 100%;
@@ -36,12 +36,11 @@ section {
   grid-template-columns: auto auto;
   flex-direction: row;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   gap: 2rem;
   width: 1300px;
   height: fit-content;
   font-size: 120px;
-
 }
 
 .diablitoons-text-start {
@@ -90,7 +89,7 @@ section {
 .words {
   position: relative;
   height: 145px;
-  width: 500px;
+  width: 450px;
   overflow: hidden;
 }
 
@@ -157,7 +156,7 @@ section {
   font-size: 36px;
   line-height: 44px;
   text-align: center;
-  width: 1200px;
+  width: 1150px;
   height: 100%;
 }
 
@@ -183,7 +182,7 @@ section {
     position: relative;
     display: grid;
     grid-template-columns: auto auto;
-    gap: 1rem;
+    gap: 1.5rem;
     flex-direction: row;
     align-items: center;
     justify-content: flex-start;
@@ -218,7 +217,7 @@ section {
     position: relative;
     display: grid;
     grid-template-columns: auto auto;
-    gap: 1rem;
+    gap: 20px;
     flex-direction: row;
     align-items: center;
     justify-content: flex-start;
@@ -240,10 +239,10 @@ section {
     font-family: 'Inter';
     font-style: normal;
     font-weight: 500;
-    font-size: 28px;
+    font-size: 26px;
     line-height: 44px;
     text-align: center;
-    width: 800px;
+    width: 850px;
     height: 100%;
   }
 }
@@ -278,7 +277,7 @@ section {
     font-size: 24px;
     line-height: 44px;
     text-align: center;
-    width: 700px;
+    width: 750px;
     height: 100%;
   }
 }
@@ -394,7 +393,7 @@ section {
     font-size: 16px;
     line-height: 1.5rem;
     text-align: left;
-    width: 320px;
+    width: 350px;
     height: 100%;
   }
 
